pdp overflow fixed

--- a/src/components/DescriptionPage/DescriptionPage.scss
+++ b/src/components/DescriptionPage/DescriptionPage.scss
@@ -15,6 +15,8 @@
                 flex-direction: column;
                 width: 15%;
                 margin-right: 1%;
+                height: 85vh;
+                overflow: auto;
                 .all-photos-container {
                     .all-photos-photo {
                         height: 100%;
@@ -29,14 +31,16 @@
                 .main-photo-photo {
                     margin: 0px;
                     width: 100%;
+                    height: 85vh;
                     max-width: 100%;
                     object-fit: contain;   
                 }
             }
         }
         .product-container-info {
-            height: 100%;
+            height: 85vh;
             width: 40%;
+            overflow: auto;
             .product-container-info-wrap {
                 width: 70%;
                 display: flex;
